more work on the instructions

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -352,32 +352,55 @@ PlayerHouse,   -800, -1800, "RedstoneRising's mountain lair", "RedstoneRising", 
 		<p><a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YjJDV09RV0NDVHM&showlabelsbelow=0">Example - map with all labels shown at all zoom-levels.</a></p>		
 		
 		<h1>Tips</h1>
-		you can use the paper texture to estimate distance, as the distance scale is aligned with it.
 		
-		Overlays
+		<h2>Estimating distance</h2>
 		
+		<div style="float:right;"><img src="images/maplines.gif" width="250" height="175"/></div>		
+		<p>You can use the paper texture to estimate distance, as the distance scale is aligned with it and tells you how far 1 block of the paper texture represents.</p>
+
+		<p>So those two villages are about 3 squares, or 600 meters (Minecraft blocks) apart.</p>
+		
+		<h2 style="clear:both;">Overlays</h2>
+		
+		<p>Yet to come...</p>
+		
+		<p>Until I write this section, you can have a look in the legend.txt file - it implements overlays</p>
+		
+		<h2>Adjusting labels so they don't overlap</h2>
+
+		<p>Yet to come...</p>
+
+		<p>When the map is fully zoomed in, all the labels will be shown - even if they overlap. Players always build things 
+		too close together, so you'll end up wanting to adjusting labels so they don't all overlap. Until I write this section, you can have a look in 
+		the example.txt file - it uses all the tricks</p>
+		
+		<!--
 		Controlling captions
 		  - add newlines to caption large images
 		  - supressed captions
 		  - aligning captions with linebreaks and spaces
 		  - labellevels and smartlabels.
 		  
-		Use a text editor
+		 -->
+
+		<h2>Short URLs</h2>
 		
-		you can use TinyUrl.com or bit.ly to create a shorter,
+		<p>You can use <a href="http://tinyurl.com">TinyUrl</a> or <a href="http://bit.ly">bit.ly</a> to hide the settings you include in the URL, and to 
+		make the URL shorter.</p>
 		
 		<h1>Philosophy</h1>
-		<p>Extra features can make the map easier, and perhaps this will happen in a later version or fork. However
-		the original idea behind this map was to preserve Minecraft's world-exploration gameplay. It's intended to be like ye olde fantasy-genre map - having to work out where you are, what direction you face and what
-		direction to head, more of a guide really. Put on your adventurer's cap.</p>
+		<p>Extra features can improve the map and perhaps will happen with time, however
+		the original idea behind this map was to preserve Minecraft's world-exploration gameplay. It's intended to be like ye olde fantasy-genre 
+		map - having to work out where you are, what direction you face and what direction to head, more of a guide really. Put on your adventurer's cap.</p>
 				
 		<p>It was made for our no-cheats/shortcuts survival server. <a href="http://overviewer.org">Overviewer</a> already caters nicely for the opposite philosophy.</p>
 		
-		What it really needs is a nice web-UI for people to enter their locations in with, but then everybody's maps only exist for as long as the website stays up.
-		
+		What'd be nice is web-UI for people to enter their locations in with, but that would need a lot of hours (and it would mean everybody's maps 
+		depend on the server being maintained).		
 		
 		<div class="footer">
-          <p class="repo-owner"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</p>
+			<div style="float: left"><a href="about.html">About</div>
+			<div style="float: right"><a href="https://github.com/jasonlong/architect-theme">architect-theme</a> is maintained by <a href="https://github.com/jasonlong">jasonlong</a>.</div>
         </div>
 		</section>
 
