Improved example image

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -32,7 +32,7 @@
 		<div style="float:right;">
 		
 			<a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM">		
-				<img src="images/screenshot-small.jpg" width="400" height="275"/>
+				<img src="images/screenshot-small.png" width="400" height="288"/>
 				<br/>
 				<p style="text-align:center;">Example map, using real (SMP) locations</p>		
 			</a>
