--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1, maximum-scale=1">
+<link rel="icon" type="image/png" href="img/favicon.png" />
 <title>Map of the Overworld</title>
 <!--[if IE]>
 	<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -73,7 +74,7 @@ head.js(
 <div class="credittext" style="position:absolute; bottom: 5px; right: 5px;">
 	<!-- Take advantage of this tiny text to include the fonts in the document 
 		 so that $(document).ready() isn't triggered before they are loaded. -->
-	create your own at <a href="http://buildingwithblocks.info">buildingWithBlocks.info</a></span>
+	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a></span>
 </div>
 <div class="resources">
 	<img id="map-background" src="img/map64.png"/>
