explains use of hyphen as href

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -221,12 +221,15 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
 		<span class="setting">showlabelsbelow</span> settings</a>.</p>
 		
 		<h3><span class="columnname">href</span></h3>
-		By placing a URL in this column you can make the map location clickable. Some suggested uses:
+		<p>By placing a URL in this column you can make the map location clickable. Some suggested uses:
 		<ul>
 		<li>A link to pictures of the location, or information.</li>
 		<li>A link to information about the player</li>
 		<li>If the location is a portal, then link to a Nether map. The portal in the example map demonstrates this.</li>
 		</ul>
+		</p>
+		<p>If the location-type has a default link but you don't want the location to link to anything,
+		then place a hyphen in the href column to disable the link.</p>
 
 		<h3><span class="columnname">icon-index</span></h3>
 		
