Adds seamonster to instructions

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -169,6 +169,7 @@ PlayerHouse,   -800, -1800, "Dr.Frankenstone's mountain lair", "Dr.Frankenstone"
 		<li><span class="locationtype">Horse</span></li>
 		<li><span class="locationtype">Wolf</span></li>      
 		<li><span class="locationtype">Dragon</span> - a dragon. You can use it to indicate an End portal, the Ender Dragon, or just as "Here be dragons" map decoration.</li>       
+		<li><span class="locationtype">SeaMonster</span></li>       		
 		<li><span class="locationtype">Ship</span> - a sailing ship. You can use it to decorate the map and indicate ocean.</li>       
 		<li><span class="locationtype">FenceOverlay</span></li>       
 		<li><span class="locationtype">IslandOverlay</span></li>       
