Smaller download button

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -35,7 +35,7 @@
 			<a href="https://googledrive.com/host/0B35KCzsTLKY1QTB6MEdoYkp2VGs/index.html?googlesrc=0B35KCzsTLKY1YkVMeWRBemtKdHM">		
 				<img src="images/screenshot-small.png" width="400" height="288"/>
 				<br/>
-				<p style="text-align:center;">Example map, using real (SMP) locations</p>		
+				<p style="text-align:center;">Explore the example map, using real (SMP) locations</p>		
 			</a>
 		</div>
 		
@@ -428,7 +428,7 @@ range = 6400</pre>
 				
 		<p>It was made for our no-cheats/shortcuts survival server. <a href="http://overviewer.org">Overviewer</a> already caters nicely for the opposite philosophy.</p>
 		
-		What'd be nice is web-UI for people to enter their locations in with, but that would need a lot of hours (and it would mean everybody's maps 
+		What'd be nice is a web-UI for people to enter their locations in with, but that would need a lot of hours (and it would mean everybody's maps 
 		depend on the server being maintained).		
 		
 		<div class="footer">
