Switching to the google-hosted jquery files, since the user's browser will probably have them cached already.

--- a/index.html
+++ b/index.html
@@ -17,8 +17,11 @@
 <script src="js/head.min.js"></script>
 <script type="text/javascript">
 head.js(
-   {jquery:            "js/jquery-1.11.0.min.js"},
-   {jquery_ui:         "js/jquery-ui-1.10.4.min.js"},
+   //{jquery:            "js/jquery-1.11.0.min.js"},
+   {jquery:            "https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"},
+   //{jquery_ui:         "js/jquery-ui-1.10.4.min.js"},
+   {jquery_ui:         "https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"},
+
    {jquery_mousewheel: "js/jquery.mousewheel-3.1.9.min.js"},
    {jquery_hammer:     "js/jquery.hammer.min-unknown.js"},  // I must be missing something, the official jquery.hammer versions don't work, but this one from http://solinitiative.com/demo/jquery.hammer.min.js does???
    {jquery_touchpunch: "js/jquery.ui.touch-punch.min.js"},
