Whoops! Bringing back the Internet Explorer compatibility.

--- a/index.html
+++ b/index.html
@@ -74,14 +74,12 @@ head.js(
 <div class="credittext" style="position:absolute; bottom: 5px; right: 5px;">
 	<!-- Take advantage of this tiny text to include the fonts in the document 
 		 so that $(document).ready() isn't triggered before they are loaded. -->
-	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a></span>
+	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a>
 </div>
 <div class="resources">
 	<img id="map-background" src="img/map64.png"/>
 	<img id="map-tileset" src="img/glyphs.png"/>
 </div>
-
-</body>
 
 <script type="text/javascript">
 head.ready(
@@ -174,5 +172,5 @@ head.ready(
 	}
 );
 </script>
-
+</body>
 </html>
