--- a/index_local.html
+++ b/index_local.html
@@ -79,7 +79,7 @@ head.js(
 		 so that $(document).ready() isn't triggered before they are loaded. -->
 	create your own at <a href="http://buildwithblocks.info">buildWithBlocks.info</a>
 </div>
-<div class="resources">
+<div class="resources" style="visibility: hidden;">
 	<img id="map-background" src="img/map64.png"/>
 	<img id="map-tileset" src="img/glyphs.png"/>
 </div>
