Adds support for apple-touch icons (for when the site is bookmarked on a phone or tablet)

--- a/instructions/googledrive.html
+++ b/instructions/googledrive.html
@@ -4,12 +4,19 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-	<link rel="icon" type="image/png" href="images/favicon.png" />	
     <link href='https://fonts.googleapis.com/css?family=Architects+Daughter' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
 
+	<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-precomposed.png"><!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
+	<link rel="apple-touch-icon-precomposed" sizes="72x72"   href="img/apple-touch-icon-72x72-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6: -->
+	<link rel="apple-touch-icon-precomposed" sizes="76x76"   href="img/apple-touch-icon-76x76-precomposed.png"><!-- For the iPad mini and the first- and second-generation iPad on iOS ≥ 7: -->
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/apple-touch-icon-120x120-precomposed.png"><!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/apple-touch-icon-152x152-precomposed.png"><!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
+	<link rel="icon" sizes="196x196" href="img/apple-touch-icon.png"><!-- Chrome v31+ for Android -->
+	<link rel="icon" sizes="16x16" type="image/png" href="img/favicon.png" />
+	
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
