--- a/instructions/about.html
+++ b/instructions/about.html
@@ -40,15 +40,15 @@
 		<p><a href="index.html">&#8617; Return to main page</a></p>
 		-->
 
-		<img src="images/me.jpg">
+		<img src="images/me.jpg" alt="picture of me"/>
 				
 		<p>This is a website I created for my Minecraft related projects. Currently there's only one.</p>
 		
-		
-
 		<h2>Contacting me</h2>
 		
-		<p>I can't guarantee I'll be prompt, as I often avoid checking my mail.</p>
+		<p>If you have problems or questions about the map generator, it has a <a href="http://www.minecraftforum.net/topic/2763149-way-for-players-to-createshare-maps-of-the-server-they-play-on-and-link-to-pics-of-builds/">thread on minecraftforum.net</a>, which I hope to keep an eye on.</p>		
+		
+		<p>Some other forms of contact are here, I can't guarantee I'll be prompt, as I often avoid checking my mail:</p>
 		
 		<ul>
 		<li>Email: drfrankenstone@ &lt;this domain&gt;</li>
