--- a/instructions/dropbox.html
+++ b/instructions/dropbox.html
@@ -48,7 +48,7 @@
 		<li>You're done!</li>
 		</ol>
 
-		<p><span class="note">(Dropboxs allows cross-origin resource sharing, so putting your Dropbox URL onto the end of the Google Drive URL 
+		<p><span class="note">(Dropbox allows cross-origin resource sharing, so putting your Dropbox URL onto the end of the Google Drive URL 
 		above works fine - you don't need to have a Google Drive account)</span></p>
 		
 		<h3>Tip</h3>
