--- a/instructions/about.html
+++ b/instructions/about.html
@@ -48,7 +48,7 @@
 		
 		<p>If you have problems or questions about the map generator, it has a <a href="http://www.minecraftforum.net/topic/2763149-way-for-players-to-createshare-maps-of-the-server-they-play-on-and-link-to-pics-of-builds/">thread on minecraftforum.net</a>, which I hope to keep an eye on.</p>		
 		
-		<p>Some other forms of contact are here, I can't guarantee I'll be prompt, as I often avoid checking my mail:</p>
+		<p>I can't guarantee I'll be prompt as I like to avoid checking my email, but some other methods of contact are here:</p>
 		
 		<ul>
 		<li>Email: drfrankenstone@ &lt;this domain&gt;</li>
