Hack to make the first impression less cluttered - moves the contents away from being the first things the user sees

--- a/instructions/index.html
+++ b/instructions/index.html
@@ -463,7 +463,7 @@ range = 6400</pre>
         <aside id="sidebar">
 			
 			<div class="contents">
-				<h1>Contents:</h1>
+				<h1>Navigation:</h1>
 				
 				<a href="#CreateYourOwn">Create your own</a>
 					<ul>
